--- a/src/components/Button/styles/Button.css
+++ b/src/components/Button/styles/Button.css
@@ -1,3 +1,9 @@
-button{
-    background-color: aqua;
+.btn-logo{
+    padding: 10px;
+    border: 0;
+    background: #Cc00de;
+}
+
+.abacaxi{
+    background: green;
 }
