--- a/src/components/Button/styles/Button.scss
+++ b/src/components/Button/styles/Button.scss
@@ -2,8 +2,7 @@
     padding: 10px;
     border: 0;
     background: #Cc00de;
-}
-
-.abacaxi{
-    background: green;
+    &.abacaxi{
+        background: green;
+    }
 }
