--- a/src/components/Button/styles/Button.scss
+++ b/src/components/Button/styles/Button.scss
@@ -1,8 +1,32 @@
-.btn-logo{
-    padding: 10px;
-    border: 0;
-    background: #Cc00de;
-    &.abacaxi{
-        background: green;
+.Button {
+  background-color: transparent;
+  border: 1px solid #FFF;
+  border-radius: 3em;
+  color:#FFF ;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  padding: 10px 30px;
+  &.default {
+    text-transform: uppercase;
+    border-color: #FFF;
+    color: #FFF;
+    transition: all .5s ease-out;
+    &:hover {
+      border: 1px solid transparent;
+      background: #000;
+      box-shadow:1px 2px 10px 3px rgba(0,0,0,.2);
     }
+    svg{
+      margin-right: 5px
+    }
+  }
+  &.about{
+    border-color: aqua;
+    text-align: start;
+    svg{
+      margin-right: 5px;
+    }
+  }
 }
