--- a/src/components/Hero/styles/Hero.scss
+++ b/src/components/Hero/styles/Hero.scss
@@ -1,4 +1,4 @@
 .Hero{
   height: 500px;
-  background:linear-gradient(to top, #028cc0, #fff);
+  background:linear-gradient(to bottom right, #5f3fff, #8DDEFF);
 }
