--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -1,5 +1,5 @@
 $blue:#028cc0;
-$lightBlue:#3dbae5;
+$lightBlue:#8DDEFF;
 
 .Navbar{
   
@@ -12,7 +12,7 @@ $lightBlue:#3dbae5;
 
       a{
         text-decoration: none;
-        color: $blue;
+        color: #fff;
         padding: 10px 20px;
         transition: .3s;
         
@@ -20,12 +20,6 @@ $lightBlue:#3dbae5;
 
       a:hover{
         color:$lightBlue;
-      }
-
-      a:after{
-        content: '';
-        height: 2px;
-        background: $lightBlue;
       }
     }
   }
