--- a/src/components/Button/styles/Button.scss
+++ b/src/components/Button/styles/Button.scss
@@ -6,17 +6,20 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  font-size: 12px;
   font-weight: 700;
-  padding: 10px 30px;
+  padding: 10px 25px;
+  outline: 0;
   &.default {
-    text-transform: uppercase;
-    border-color: #FFF;
+    border: 0;
     color: #FFF;
-    transition: all .5s ease-out;
+    background: linear-gradient(to bottom right, #8ddeff, #0893c3);
+    transition: all .4s ease-out;
+    margin-right: 15px;
+    box-shadow:0 2px 10px 1px rgba(10,10,10,.2);
+    
     &:hover {
-      border: 1px solid transparent;
-      background: #000;
-      box-shadow:1px 2px 10px 3px rgba(0,0,0,.2);
+      box-shadow:1px 2px 10px 4px rgba(0,0,0,.3);
     }
     svg{
       margin-right: 5px
