--- a/src/components/Header/styles/Header.scss
+++ b/src/components/Header/styles/Header.scss
@@ -1,6 +1,6 @@
 .Header{
   border-bottom: 1px solid rgba(255,255,255,.2);
-  padding: 10px 100px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
