--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -2,9 +2,16 @@ $blue:#028cc0;
 $lightBlue:#8DDEFF;
 
 .Navbar{
+
+  svg{
+    width: 50px;
+    height: 50px;
+    padding: 15px;
+    cursor: pointer;
+  }
   
   &-list{
-    display: flex;
+    display: none;
     list-style-type: none;
 
     
