--- a/src/components/Hero/styles/Hero.scss
+++ b/src/components/Hero/styles/Hero.scss
@@ -2,10 +2,14 @@
   background:linear-gradient(to bottom right, #5f3fff, #8DDEFF);
 
   .slogan-container{
-    padding: 30px 100px;
+    padding: 50px 5%;
     display: flex;
     align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
+
+    img{
+      display: none;
+    }
   }
 
   .slogan{
