--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -58,6 +58,7 @@ $lightBlue:#8DDEFF;
 .menuActive{
   .Navbar-list{
     margin: 0;
-
+    box-shadow: -5px 0px 25px rgba(80,80,80,.5);
+    
   }
 }
