Card box-shadow added

--- a/src/components/Features/styles/Features.scss
+++ b/src/components/Features/styles/Features.scss
@@ -2,6 +2,7 @@
   padding: 20px 5%;
   &-cards{
     display: flex;
-    justify-content: center
+    justify-content: center;
+    flex-wrap: wrap;
   }
 }
