--- a/src/components/Card/styles/Card.scss
+++ b/src/components/Card/styles/Card.scss
@@ -3,7 +3,6 @@
   height: 330px;
   text-align: center;
   padding: 30px;
-  border: 1px solid black;
   h3 {
     color: #5f3fff;
     font-size: 16px;
@@ -11,5 +10,9 @@
   p {
     font-size: 13px;
     line-height: 1.5
+  }
+  &:hover{
+    transition: box-shadow .7s ease;
+    box-shadow:1px 2px 10px 4px rgba(0,0,0,.3);
   }
 }
