crate BoxInfo component

--- a/src/components/Hero/styles/Hero.scss
+++ b/src/components/Hero/styles/Hero.scss
@@ -1,5 +1,6 @@
 .Hero{
   background:linear-gradient(to bottom right, #5f3fff, #8DDEFF);
+  padding-top: 60px;
 
   .slogan-container{
     padding: 50px 5%;
