--- a/src/components/Header/styles/Header.scss
+++ b/src/components/Header/styles/Header.scss
@@ -1,9 +1,11 @@
 .Header{
   border-bottom: 1px solid rgba(255,255,255,.2);
-  padding: 10px;
+  padding: 0 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  width: 100%;
 
   .Logo-container{
     display: flex;
