--- a/src/components/BoxInfo/styles/BoxInfo.scss
+++ b/src/components/BoxInfo/styles/BoxInfo.scss
@@ -1,14 +1,19 @@
 .BoxInfo{
   width: 70%;
   margin: 10px auto;
-  padding: 20px;
+  padding: 30px;
   box-shadow: 0 0 10px 1px #aaa;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
 
 
   h3{
-
+    display: inline-block;
+    font-weight: normal;
+    margin: 0;
+    margin-bottom: 10px;
   }
 
   .progressBar{
@@ -16,7 +21,9 @@
   }
 
   p{
-    font-size: 30px;
+    font-size: 40px;
+    display: inline-block;
+    margin: 0;
 
     span{
       font-size: 18px;
