--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Russo+One');
+
+
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+	font-family: 'Roboto', sans-serif;
 }
 
 
