--- a/src/pages/Dashboard/styles/Dashboard.scss
+++ b/src/pages/Dashboard/styles/Dashboard.scss
@@ -1,3 +1,17 @@
+.list-item-bus{
+  border-top: 1px solid rgba(255,255,255,.3);
+  border-bottom: 1px solid rgba(255,255,255,.3);
+
+  p:first-of-type{
+    font-size: 20px;
+  }
+  p{
+    font-size: 12px;
+    margin: 10px;
+    color: #fff;
+  }
+}
+
 .Dashboard-BoxInfo{
   padding: 20px 5%;
 }
