--- a/src/components/About/styles/About.scss
+++ b/src/components/About/styles/About.scss
@@ -1,6 +1,6 @@
 .About{
   background: #edf1f5;
-  padding: 20px 5%;
+  padding: 40px 5%;
 
   p{
     text-align: justify;
@@ -8,6 +8,7 @@
 
   .googlePlay{
     padding: 0 25px;
+    margin-top: 30px;
 
     p{
       margin: 8px 0;
