--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
 	font-family: 'Roboto', sans-serif;
 }
 
+h1{
+	font-family: 'Russo One', sans-serif;
+}
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
