change font-size of title and subtitle

--- a/src/components/Hero/styles/Hero.scss
+++ b/src/components/Hero/styles/Hero.scss
@@ -18,17 +18,15 @@
     display: inline-block;
 
     .title{
-      font-size: 70px;
-      margin: 0;
+      font-size: 80px;
       color: #fff;
-      font-family: 'Russo One', sans-serif;
       
     }
 
     .subTitle{
-      margin: 0;
       font-weight: normal;
       color: #fff;
+      font-size: 20px;
       
     }
 
@@ -36,7 +34,7 @@
       font-size: 13px;
       line-height: 1.5;
       color: #fff;
-      
+      margin-top: 20px;
     }
 
     .buttons{
