--- a/src/components/Features/styles/Features.scss
+++ b/src/components/Features/styles/Features.scss
@@ -1,5 +1,6 @@
 .Features{
   padding: 40px 5%;
+
   &-BoxFeatures{
     display: flex;
     justify-content: center;
@@ -8,5 +9,14 @@
 
   .image{
     display: none;
+  }
+}
+
+@media (min-width: 768px){
+  .Features{
+
+    &-BoxFeatures{
+      flex-wrap: unset;
+    }
   }
 }
