--- a/src/components/Title/styles/Title.scss
+++ b/src/components/Title/styles/Title.scss
@@ -1,6 +1,6 @@
 .Title{
   font-size: 35px;
-  color: #5f3fff;
+  color: #38b7df;
   text-align: center;
   font-weight: normal;
 
@@ -9,7 +9,7 @@
     width: 70px;
     position: relative;
     top: -15px;
-    background: #5f3fff;
+    background: #38b7df;
     border: 0
   }
 }
