--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -23,18 +23,16 @@ $lightBlue:#8DDEFF;
   
   &-list{
     list-style-type: none;
-    width: 200px;
+    width: 100%;
     margin: 0;
-    margin-right: -200px;
-    position: fixed;
-    top: 0px;
+    position: absolute;
+    top: 75px;
     right: 0;
-    height: 100%;
     transition: .5s;
-    text-align: right;
+    text-align: center;
     background: linear-gradient(to bottom, #0893c3, #8ddeff);
-    padding: 0;    
-    padding-top: 100px;
+    padding: 20px 0;
+    z-index: 10;
     
     li{
 
