--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -23,16 +23,18 @@ $lightBlue:#8DDEFF;
   
   &-list{
     list-style-type: none;
-    width: 100%;
+    width: 200px;
     margin: 0;
-    position: absolute;
-    top: 75px;
+    margin-right: -200px;
+    position: fixed;
+    top: 0px;
     right: 0;
+    height: 100%;
     transition: .5s;
-    text-align: center;
+    text-align: right;
     background: linear-gradient(to bottom, #0893c3, #8ddeff);
-    padding: 20px 0;
-    z-index: 10;
+    padding: 0;    
+    padding-top: 100px;
     
     li{
 
