--- a/src/components/Footer/styles/Footer.scss
+++ b/src/components/Footer/styles/Footer.scss
@@ -12,6 +12,10 @@
     border: 0;
     p{
       color: #283033;
+      font-size: 12px;
+      span{
+        font-size: 15px;
+      }
     }
   }
 }
