--- a/src/components/About/styles/About.scss
+++ b/src/components/About/styles/About.scss
@@ -8,19 +8,22 @@
   .text{
     text-align: justify;
     margin: 20px 0;
+    line-height: 1.5;
   }
 
   .googlePlay{
     padding: 0 25px;
-    margin-top: 30px;
+    margin: 20px auto;
+    border: 2px solid #8ddeff;
 
     p{
       margin: 8px 0;
-      margin-left: 5px;      
+      margin-left: 5px;
+      font-size: 12px;      
     }
 
     span{
-      font-size: 14px;
+      font-size: 15px;
     }
 
   }
