--- a/src/components/BoxFeature/styles/BoxFeature.scss
+++ b/src/components/BoxFeature/styles/BoxFeature.scss
@@ -2,16 +2,22 @@
   width: 250px;
   text-align: center;
   padding: 30px;
+  transition: box-shadow .5s;
+  
   h3 {
     color: #5f3fff;
     font-size: 16px;
+    margin: 10px 0;
   }
   p {
-    font-size: 13px;
     line-height: 1.5
   }
-  &:hover{
-    transition: box-shadow .7s ease;
-    box-shadow:1px 2px 10px 4px rgba(0,0,0,.3);
+}
+
+@media(min-width:1024px){
+  .BoxFeature{
+    &:hover{
+      box-shadow:0px 0px 20px 0px rgba(0,0,0,.2);
+    }
   }
 }
