--- a/src/components/Contact/styles/Contact.scss
+++ b/src/components/Contact/styles/Contact.scss
@@ -6,5 +6,8 @@
     background:linear-gradient(to bottom right, #5f3fff, #8DDEFF);
     padding: 20px;
     border-radius: 10px;
+    max-width: 600px;
+    margin: auto;
+    margin-top: 40px;
   }
 }
