--- a/src/components/Features/styles/Features.scss
+++ b/src/components/Features/styles/Features.scss
@@ -9,6 +9,9 @@
 
   .image{
     display: none;
+    margin: auto;
+    position: relative;
+    top: 25px
   }
 }
 
@@ -17,6 +20,10 @@
 
     &-BoxFeatures{
       flex-wrap: unset;
+    }
+
+    .image{
+      display: block;
     }
   }
 }
