--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -12,9 +12,9 @@ $lightBlue:#8DDEFF;
 .Navbar{
 
   svg{
-    width: 50px;
-    height: 50px;
-    padding: 15px;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
     cursor: pointer;
     position: relative;
     z-index: 100;
@@ -23,9 +23,9 @@ $lightBlue:#8DDEFF;
   
   &-list{
     list-style-type: none;
-    width: 200px;
+    width: 270px;
     margin: 0;
-    margin-right: -200px;
+    margin-right: -270px;
     position: fixed;
     top: 0px;
     right: 0;
@@ -35,6 +35,7 @@ $lightBlue:#8DDEFF;
     background: linear-gradient(to bottom, #0893c3, #8ddeff);
     padding: 0;    
     padding-top: 100px;
+    z-index: 1;
     
     li{
 
