--- a/src/components/Features/styles/Features.scss
+++ b/src/components/Features/styles/Features.scss
@@ -1,5 +1,6 @@
 .Features{
   padding: 40px 5%;
+  text-align: center;    
 
   &-BoxFeatures{
     display: flex;
@@ -11,7 +12,7 @@
     display: none;
     margin: auto;
     position: relative;
-    top: 25px
+    top: 30px
   }
 }
 
