--- a/src/components/About/styles/About.scss
+++ b/src/components/About/styles/About.scss
@@ -1,9 +1,12 @@
 .About-container{
   background: #edf1f5;
   display: flex;
+  justify-content: space-around;
 
 .About{
   padding: 40px 5%;
+  text-align: center;  
+  max-width: 800px;  
 
   .text{
     text-align: justify;
@@ -11,9 +14,16 @@
     line-height: 1.5;
   }
 
+  ul{
+    list-style-position: inside;
+    li{
+      margin-top: 10px;
+    }
+  }
+
   .googlePlay{
     padding: 0 25px;
-    margin: 20px auto;
+    margin: 30px 0;
     border: 2px solid #8ddeff;
 
     p{
@@ -28,6 +38,10 @@
 
   }
 }
+  .graphic{
+    display: block;
+    margin:30px auto;
+  }
   
   img{
     display: none;
