--- a/src/components/Contact/styles/Contact.scss
+++ b/src/components/Contact/styles/Contact.scss
@@ -1,12 +1,13 @@
 .Contact{
   padding: 40px 5%;
-  background: #283033;
+  background: #384043;
+  text-align: center;  
 
   .Form{
     background:linear-gradient(to bottom right, #5f3fff, #8DDEFF);
     padding: 20px;
     border-radius: 10px;
-    max-width: 600px;
+    max-width: 800px;
     margin: auto;
     margin-top: 40px;
   }
