--- a/src/components/Footer/styles/Footer.scss
+++ b/src/components/Footer/styles/Footer.scss
@@ -1,9 +1,10 @@
 .Footer{
   padding: 20px 5%;
   background: #283033;
+  text-align: center;
+
   p{
     color: #fff;
-    text-align: center;
   }
 
   .googlePlay{
@@ -15,7 +16,15 @@
       font-size: 12px;
       span{
         font-size: 15px;
+        color: #283033;
       }
     }
   }
+
+  .copyright{
+    color: #aaa;
+    font-size: 10px;
+    width: 100%;
+  }
+
 }
