--- a/src/components/Hero/styles/Hero.scss
+++ b/src/components/Hero/styles/Hero.scss
@@ -41,6 +41,10 @@
       margin-top: 40px;
       justify-content: center;
     }
+
+    .Button.default:hover{
+      box-shadow:1px 2px 10px 4px rgba(50,50,50,.3);      
+    }
   }
 }
 
@@ -49,6 +53,12 @@
     .slogan-container{
       img{
         display: block;
+      }
+    }
+
+    .slogan{
+      .buttons{
+        justify-content: initial;
       }
     }
   }
