--- a/src/components/HowItWorks/styles/HowItWorks.scss
+++ b/src/components/HowItWorks/styles/HowItWorks.scss
@@ -2,6 +2,10 @@
   padding: 40px 5%;
   background: #edf1f5;
 
+  .Title{
+    text-align: center;      
+  }
+
   &-container{
     display: flex;
     justify-content: space-around;
