--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -34,7 +34,7 @@ $lightBlue:#8DDEFF;
     text-align: right;
     background: linear-gradient(to bottom, #0893c3, #8ddeff);
     padding: 0;    
-    padding-top: 100px;
+    padding-top: 80px;
     z-index: 1;
     
     li{
@@ -45,12 +45,19 @@ $lightBlue:#8DDEFF;
         transition: .3s;
         display: block;
         padding: 20px;
-        
+        font-size: 16px;
       }
 
       a:hover{
         color:$lightBlue;
       }
+    }
+
+    .search{
+      width: 85%;
+      margin: 0 20px;
+      padding: 5px 10px;
+      outline: none;
     }
   }
 
@@ -61,5 +68,37 @@ $lightBlue:#8DDEFF;
     margin: 0;
     box-shadow: -5px 0px 25px rgba(80,80,80,.5);
     
+  }
+}
+
+@media(min-width:1024px){
+  .Navbar{
+    svg{
+      display: none;
+    }
+
+    &-list{
+      list-style-type: none;
+      width: auto;
+      height: auto;
+      position: initial;
+      margin: 0;
+      transition: .5s;
+      text-align: right;
+      background: none;
+      padding: 0;    
+      display: flex;
+
+      li{
+        a{
+          padding: 15px 10px;
+          font-size: 14px;
+        }
+      }
+
+      li:first-of-type a{
+      }
+
+    }
   }
 }
