--- a/src/components/BoxInfo/styles/BoxInfo.scss
+++ b/src/components/BoxInfo/styles/BoxInfo.scss
@@ -1,12 +1,12 @@
 .BoxInfo{
-  margin: 25px auto;
+  margin: 35px auto;
   padding: 40px;
   box-shadow: 0 0 10px 1px #aaa;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-
+  max-width: 400px;
 
   h3{
     display: inline-block;
@@ -27,5 +27,11 @@
     span{
       font-size: 18px;
     }
+  }
+}
+
+@media(min-width:1024px){
+  .BoxInfo{
+    min-width: 250px;
   }
 }
