--- a/src/components/Hero/styles/Hero.scss
+++ b/src/components/Hero/styles/Hero.scss
@@ -40,6 +40,10 @@
       display: flex;
       margin-top: 40px;
       justify-content: center;
+
+      a.Button{
+        text-decoration: none;
+      }
     }
 
     .Button.default:hover{
