--- a/src/pages/Dashboard/styles/Dashboard.scss
+++ b/src/pages/Dashboard/styles/Dashboard.scss
@@ -17,6 +17,10 @@
         font-weight: bold;
         font-size: 14px;
       }
+
+      span:last-of-type{
+        font-size: 12px;
+      }
   
       p:first-of-type{
         font-size: 20px;
