--- a/src/components/Form/styles/Form.scss
+++ b/src/components/Form/styles/Form.scss
@@ -48,6 +48,7 @@
   
     input::placeholder, textarea::placeholder{
       color: #fff;
+      opacity: .5;
     }
   
     input:focus, textarea:focus{
