--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -6,12 +6,8 @@
 }
 
 svg{
-  width: 40px;
-  height: 40px;
-  padding: 10px;
   cursor: pointer;
   position: relative;
-  z-index: 100;
   
 }
 
@@ -31,7 +27,9 @@ svg{
 }
 
   .Navbar{
-  
+    position: relative;
+    top: 10px;
+    right: -10px;
     
     &-list{
       list-style-type: none;
@@ -48,7 +46,14 @@ svg{
       padding: 0;    
       padding-top: 80px;
       z-index: 1;
-      
+
+        .closeMenu{
+          position: absolute;
+          top: 0;
+          padding: 20px;
+          color: #fff;
+          font-size: 20px;
+        }
   
         a{
           text-decoration: none;
@@ -71,6 +76,9 @@ svg{
 @media(min-width:1024px){
   .Home{
     .Navbar{
+      top: 0;
+      right: -40px;
+
       svg{
         display: none;
       }
@@ -86,6 +94,10 @@ svg{
         background: none;
         padding: 0;    
         display: flex;
+
+        .closeMenu{
+          display: none;
+        }
 
         li{
           a{
