fix closemenu cursor

--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -53,6 +53,7 @@ svg{
           padding: 20px;
           color: #fff;
           font-size: 20px;
+          cursor: pointer;
         }
   
         a{
