--- a/src/components/Navbar/styles/Navbar.scss
+++ b/src/components/Navbar/styles/Navbar.scss
@@ -46,6 +46,7 @@ svg{
       padding: 0;    
       padding-top: 80px;
       z-index: 1;
+      overflow-y: overlay;
 
         .closeMenu{
           position: absolute;
