--- a/src/pages/Dashboard/styles/Dashboard.scss
+++ b/src/pages/Dashboard/styles/Dashboard.scss
@@ -64,12 +64,9 @@
       padding-top: 0;
       margin-right: 0;
       display: none;
-      background: linear-gradient(to bottom, rgba(8,147,195,1), rgba(141,222,255,.8));      
+      background: linear-gradient(to top, rgb(95, 63, 255), rgb(141, 222, 255))      
     }
 
-    .list-item-bus{
-
-    }
   }
 
   .Dashboard-BoxInfo{
