--- a/src/components/Features2/styles/Features2.scss
+++ b/src/components/Features2/styles/Features2.scss
@@ -21,6 +21,7 @@
   .Features2-CardInfo-container{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 
   .Features2-CardInfo{
     margin: 20px auto;
@@ -82,6 +83,7 @@
     .Features2-CardInfo-container{
       .image{
         display: block;
+        width: 280px
       }
     }
   }
